# example-haskell-mailer

./: haskell-mailer.cabal  stack.yaml
exmaple-html/: static.html
nginx/: nginx-default.conf
src/: Main.hs
